# stellars-finance-contracts

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Cargo.toml  MEDIUM_FINDINGS.md  Makefile  Readme.md  Stellars_Financial_Document.md  claude.md  compose.backend.yml  compose.oracles.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todos.md  tsconfig.base.json
contracts/config-manager/: Cargo.toml
contracts/config-manager/src/: contract.rs  errors.rs  events.rs  lib.rs  logic.rs  storage.rs  types.rs  validate.rs
contracts/config-manager/src/tests/: helpers.rs  mod.rs  test_admin_split_brain.rs  test_admin_transfer.rs  test_bounds_tightening.rs  test_deposit_fee.rs  test_fee_config.rs  test_fee_splits.rs  test_grant_role.rs  test_has_role.rs  test_initialize.rs  test_liquidation_threshold.rs  test_per_rule_error_codes.rs  test_propose_upgrade.rs  test_protocol_limits.rs  test_revoke_role.rs  test_role_lifecycle.rs  test_transfer_admin.rs  test_upgrade.rs  test_upgrade_timelock.rs  test_upgrade_timelock_enforcement.rs
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: config_manager.rs  events.rs  lib.rs  oracle.rs  oracle_router.rs  position_manager.rs  types.rs  upgrade.rs  vault.rs
contracts/oracle-router/: Cargo.toml
contracts/oracle-router/src/: contract.rs  errors.rs  events.rs  lib.rs  logic.rs  math.rs  storage.rs  types.rs
contracts/oracle-router/src/tests/: helpers.rs  mod.rs  test_bump_oracle_state.rs  test_get_price.rs  test_initialize.rs  test_oracle_config.rs  test_oracle_sources.rs  test_upgrade.rs  (+1 more)
contracts/position-manager/: Cargo.toml
contracts/position-manager/src/: close.rs  config_loaders.rs  contract.rs  errors.rs  events.rs  guards.rs  increase.rs  lib.rs  logic.rs  math.rs  pnl_refresh.rs  revenue.rs  storage.rs  tick.rs  tp_sl.rs  tp_sl_escrow.rs  types.rs  vault_view.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: contract.rs  errors.rs  events.rs  lib.rs  logic.rs  storage.rs
contracts/vault/test_snapshots/: test_convert_to_shares_after_fee_deposit.1.json  test_convert_to_shares_and_assets_are_inverse.1.json  test_deposit_after_unpause_succeeds.1.json  test_deposit_does_not_affect_reserved_usdc.1.json  test_deposit_exceeding_balance_reverts.1.json  test_deposit_fee_calculation_overflow.1.json  test_deposit_fee_changes_between_deposits.1.json  test_deposit_fee_exact_bps_precision.1.json  test_deposit_fee_removed_after_being_set.1.json  test_deposit_fee_rounds_down_for_tiny_amount.1.json  test_deposit_fee_tracked_in_unclaimed_fees.1.json  test_deposit_large_amount.1.json  test_deposit_max_fee_takes_everything.1.json  test_deposit_multiple_deposits_accumulate_fees.1.json  test_deposit_operator_must_authorize.1.json  test_deposit_success.1.json  test_deposit_success_zero_fee.1.json  test_deposit_when_paused_reverts.1.json  test_deposit_with_fee_100bps.1.json  test_double_init_different_asset_reverts.1.json  test_double_init_different_config_manager_reverts.1.json  test_free_liquidity_accounts_for_unclaimed_fees.1.json  test_free_liquidity_ignores_negative_net_pnl.1.json  test_initialize_requires_admin_auth.1.json  test_initialize_success.1.json  test_max_deposit_after_unpause_returns_max.1.json  test_max_withdraw_respects_free_liquidity.1.json  test_preview_deposit_does_not_account_for_fee.1.json  test_preview_redeem_matches_actual_redeem.1.json  test_preview_withdraw_matches_actual_withdraw.1.json  test_redeem_different_receiver.1.json  test_redeem_succeeds_after_unpause.1.json  test_withdraw_exactly_at_free_liquidity_boundary.1.json  test_withdraw_success.1.json  test_withdraw_zero_amount.1.json
test-suites/: Cargo.toml
test-suites/fuzz/: integrated_drift_fuzz.proptest-regressions  integrated_drift_fuzz.rs  position_fuzz.proptest-regressions  position_fuzz.rs  vault_fuzz.rs
test-suites/integration/: adl_scenarios.rs  admin_operations.rs  attack_vectors.rs  drift_pairs.rs  edge_cases.rs  error_paths.rs  extreme_market.rs  full_lifecycle.rs  funding_and_fees.rs  liquidation_cascade.rs  multi_user.rs  pnl_settlement_invariants.rs  role_enforcement.rs  settlement_and_boundaries.rs  test_fee_distribution.rs  tp_sl_lifecycle.rs
test-suites/src/: lib.rs
test-suites/src/testutils/: invariants.rs  mod.rs
test-suites/test_snapshots/: fuzz_deposit_withdraw_round_trip.1.json  fuzz_deposit_withdraw_round_trip.10.json  fuzz_deposit_withdraw_round_trip.11.json  fuzz_deposit_withdraw_round_trip.12.json  fuzz_deposit_withdraw_round_trip.13.json  fuzz_deposit_withdraw_round_trip.14.json  fuzz_deposit_withdraw_round_trip.15.json  fuzz_deposit_withdraw_round_trip.16.json  fuzz_deposit_withdraw_round_trip.17.json  fuzz_deposit_withdraw_round_trip.18.json  fuzz_deposit_withdraw_round_trip.19.json  fuzz_deposit_withdraw_round_trip.2.json  fuzz_deposit_withdraw_round_trip.20.json  fuzz_deposit_withdraw_round_trip.21.json  fuzz_deposit_withdraw_round_trip.22.json  fuzz_deposit_withdraw_round_trip.23.json  fuzz_deposit_withdraw_round_trip.24.json  fuzz_deposit_withdraw_round_trip.25.json  fuzz_deposit_withdraw_round_trip.26.json  fuzz_deposit_withdraw_round_trip.27.json  fuzz_deposit_withdraw_round_trip.28.json  fuzz_deposit_withdraw_round_trip.29.json  fuzz_deposit_withdraw_round_trip.3.json  fuzz_deposit_withdraw_round_trip.30.json  fuzz_deposit_withdraw_round_trip.4.json  fuzz_deposit_withdraw_round_trip.5.json  fuzz_deposit_withdraw_round_trip.6.json  fuzz_deposit_withdraw_round_trip.7.json  fuzz_deposit_withdraw_round_trip.8.json  fuzz_deposit_withdraw_round_trip.9.json  fuzz_entry_price_equals_oracle.1.json  fuzz_entry_price_equals_oracle.10.json  fuzz_entry_price_equals_oracle.11.json  fuzz_entry_price_equals_oracle.12.json  fuzz_entry_price_equals_oracle.13.json  fuzz_entry_price_equals_oracle.14.json  fuzz_entry_price_equals_oracle.15.json  fuzz_entry_price_equals_oracle.16.json  fuzz_entry_price_equals_oracle.17.json  fuzz_entry_price_equals_oracle.18.json  (+306 more)
test-suites/tests/: config_manager_tests.rs  oracle_router_tests.rs  position_manager_tests.rs  vault_tests.rs
(+559 files in other folders)
