[package]
name = "test-suites"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
vault = { path = "../contracts/vault", features = ["testutils"] }
position-manager = { path = "../contracts/position-manager", features = ["testutils"] }
config-manager = { path = "../contracts/config-manager", features = ["testutils"] }
oracle-router = { path = "../contracts/oracle-router", features = ["testutils"] }
mock-token = { path = "../mocks/mock-token", features = ["testutils"] }
mock-oracle = { path = "../mocks/mock-oracle", features = ["testutils"] }
shared = { workspace = true }

[dev-dependencies]
proptest = "1"

# ---------------------------------------------------------------------------
# Integration tests
# ---------------------------------------------------------------------------

[[test]]
name = "full_lifecycle"
path = "integration/full_lifecycle.rs"

[[test]]
name = "multi_user"
path = "integration/multi_user.rs"

[[test]]
name = "liquidation_cascade"
path = "integration/liquidation_cascade.rs"

[[test]]
name = "admin_operations"
path = "integration/admin_operations.rs"

[[test]]
name = "error_paths"
path = "integration/error_paths.rs"

[[test]]
name = "attack_vectors"
path = "integration/attack_vectors.rs"

[[test]]
name = "extreme_market"
path = "integration/extreme_market.rs"

[[test]]
name = "edge_cases"
path = "integration/edge_cases.rs"

[[test]]
name = "funding_and_fees"
path = "integration/funding_and_fees.rs"

[[test]]
name = "tp_sl_lifecycle"
path = "integration/tp_sl_lifecycle.rs"

[[test]]
name = "adl_scenarios"
path = "integration/adl_scenarios.rs"

[[test]]
name = "settlement_and_boundaries"
path = "integration/settlement_and_boundaries.rs"

[[test]]
name = "test_fee_distribution"
path = "integration/test_fee_distribution.rs"

# ---------------------------------------------------------------------------
# Fuzz / property-based tests
# ---------------------------------------------------------------------------

[[test]]
name = "position_fuzz"
path = "fuzz/position_fuzz.rs"

[[test]]
name = "vault_fuzz"
path = "fuzz/vault_fuzz.rs"
