[package]
name = "position-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }
config-manager = { path = "../config-manager" }
vault = { path = "../vault" }
oracle-router = { path = "../oracle-router" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
shared = { workspace = true, features = ["testutils"] }
config-manager = { path = "../config-manager", features = ["testutils"] }
vault = { path = "../vault", features = ["testutils"] }
oracle-router = { path = "../oracle-router", features = ["testutils"] }
mock-token = { path = "../../mocks/mock-token", features = ["testutils"] }
mock-oracle = { path = "../../mocks/mock-oracle", features = ["testutils"] }
