[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }
stellar-tokens = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
shared = { workspace = true, features = ["testutils"] }
config-manager = { path = "../config-manager", features = ["testutils"] }
mock-token = { path = "../../mocks/mock-token", features = ["testutils"] }
